--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 version: "3"
 services:
   client:
+    tty: true
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./client:/var/app
+      - ./aws-mqtt:/var/app
+    command: ['python3']
